# srgen

./: CMakeLists.txt  analysis.sh  batch_bleu.sh  speed.py
run/: train-labeled-50pos-50dep.sh  train-labeled-50pos-alldep.sh  train-labeled-50pos-nodep.sh  train-labeled-allpos-50dep.sh  train-labeled-allpos-alldep.sh  train-labeled-allpos-nodep.sh  train-labeled-nopos-50dep.sh  train-labeled-nopos-alldep.sh  train-labeled-nopos-nodep.sh  train-labeled-topdown-constrain-90.sh  train-labeled-topdown-constrain-95.sh  train-labeled-topdown-constrain.sh  train-labeled-topdown-feature.sh  train-unlabeled-50pos-50dep.sh  train-unlabeled-50pos-alldep.sh  train-unlabeled-50pos-nodep.sh  train-unlabeled-allpos-50dep.sh  train-unlabeled-allpos-alldep.sh  train-unlabeled-allpos-nodep.sh  train-unlabeled-nopos-50dep.sh  train-unlabeled-nopos-alldep.sh  train-unlabeled-nopos-nodep.sh  train_full.sh  train_full_with_guidance.sh  train_none.sh  train_postag.sh  train_unlabeled.sh
sample/: sample.dep  sample.tok
src/: action.cc  action.h  constraint.cc  constraint.h  context.h  debug.h  dependency.cc  dependency.h  engine.cc  engine.h  extractor.cc  instance.cc  instance.h  io.cc  io.h  param.h  pipe.cc  pipe.h  score.h  score_map.h  settings.h  srg.cc  state.cc  state.h  test.cc  tree.cc  tree.h  utils.cc  utils.h  weight.cc  weight.h
src/extract/: context.h  extractor.cc  full_with_guidance_extractor.cc  full_with_guidance_feature_extractor.cc  full_with_topdown_feature_extractor.cc  shortcut.h
src/io/: io.cc  io.h
src/model/: appendix.h  shortcut.h  weight.cc  weight.h
src/pipe/: full.cc  full.h  full_with_guidance.cc  full_with_guidance.h  full_with_guidance_feature.cc  full_with_guidance_feature.h  full_with_topdown_constrain.cc  full_with_topdown_constrain.h  full_with_topdown_feature.cc  full_with_topdown_feature.h  none.cc  none.h  none_with_constrain.cc  none_with_constrain.h  partial.cc  partial.h  pipe.cc  pipe.h  postag.cc  postag.h
src/types/: action.cc  action.h  constraint.cc  constraint.h  context.h  engine.cc  engine.h  instance.cc  instance.h  param.h  score.h  score_map.h  settings.h  state.cc  state.h  tree.cc  tree.h  weight.cc  weight.h
src/unittest/: test.cc
src/util/: arguments_product.h  utils.cc  utils.h
src/zgen/: builder.cc  builder.h  opt.cc  opt.h  shuffler.cc  srg.cc  stream.cc  stream.h
